<resources>
    <!-- Fragment Title String for MainActivity -->
    <string name="fragment_main_home">居家狀態</string>
    <string name="fragment_main_family">家庭管理</string>
    <string name="fragment_main_mode">組合鍵設置</string>
    <string name="fragment_main_log">設備日誌</string>
    <string name="fragment_main_notLogin">尚未登入</string>
    <string name="login">登入</string>
    <string name="sign_up">註冊</string>
    <string name="change_password">修改密碼</string>


    <!--Fragment Title String for AccountActivity-->
    <string name="fragment_account_login">用戶登入</string>
    <string name="fragment_account_forgot">忘記密碼</string>
    <string name="fragment_account_signup">用戶註冊</string>
    <string name="fragment_account_reset">設定新密碼</string>
    <string name="fragment_account_resend">已寄出驗證信</string>

    <!--Fragment String for MainActivity-->
    <string name="not_login">尚未登入</string>

    <!--Fragment Label String for AccountActivity-->
    <string name="label_setUserName">用戶名稱</string>
    <string name="label_setPassword">設置密碼</string>
    <string name="label_setConfirmPassword">確認密碼</string>
    <string name="label_setEmail">電子信箱</string>
    <string name="label_forget"><u>忘記密碼</u></string>
    <string name="label_signUp"><u>註冊帳號</u></string>

    <!--Fragment hint String for AccountActivity-->
    <string name="hint_name">輸入用戶名稱</string>
    <string name="hint_ssid">輸入WIFI名稱</string>
    <string name="hint_password">輸入用戶密碼</string>
    <string name="hint_ssid_password">輸入WIFI密碼</string>
    <string name="hint_password_confirm">確認用戶密碼</string>
    <string name="hint_password_old">確認舊密碼</string>
    <string name="hint_password_new">輸入新密碼</string>
    <string name="hint_password_new_confirm">確認新密碼</string>
    <string name="hint_email">輸入電子郵件</string>
    <string name="hint_family_name">輸入家庭名稱</string>
    <string name="hint_device_name">輸入設備名稱</string>


    <!--customize your string here-->
    <string name="app_name">I-LIFE</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="room_temperature">室內溫濕度</string>
    <string name="room_humidity">室內濕度</string>
    <string name="today_weather">今日天氣</string>
    <string name="temperature_range">XX℃-XX℃</string>
    <string name="switch_turn_on">開</string>
    <string name="switch_turn_off">關</string>
    <string name="text_tplink_switch">延長線開關</string>
    <string name="text_family_information">家庭留言板</string>
    <string name="text_family_member">家庭成員</string>
    <string name="mode_key_1">組合鍵1</string>
    <string name="mode_key_2">組合鍵2</string>
    <string name="mode_key_3">組合鍵3</string>
    <string name="mode_key_4">組合鍵4</string>
    <string name="mode_key_5">組合鍵5</string>
    <string name="mode_key_6">組合鍵6</string>
    <string name="confirm">確定</string>
    <string name="mode_key_setting">組合鍵設置</string>
    <string name="text_edit_member">編輯成員</string>
    <string name="next_step">下一步</string>
    <string name="hint_mode_key_name">輸入組合鍵名稱</string>
    <string name="complete">完成</string>
    <string name="ac_temperature">冷氣溫度</string>
    <string name="ac_switch">冷氣開關</string>
    <string name="text_edit_family">編輯家庭</string>
    <string name="text_add_member">新增成員</string>
    <string name="text_create_family">建立家庭</string>
    <string name="text_add_family">新增家庭</string>
    <string name="text_family_request">加入請求</string>
    <string name="device">設備功能</string>
    <string name="add_device">添加設備</string>
    <string name="device_list">設備清單</string>
    <string name="logout">登出</string>
    <string name="add_family">新增家庭</string>
    <string name="send">送出</string>
    <string name="delete_member">踢出家庭</string>
    <string name="hope_add_family">希望加入這個家庭</string>
    <string name="btn_reject">狠狠拒絕</string>
    <string name="btn_accept">歡迎</string>
    <string name="text_family_code">請欲加入者於加入家庭功能區，輸入此家庭代碼。</string>
    <string name="hint_family_code">輸入家庭代碼</string>
    <string name="add_mode_key">添加組合鍵</string>
    <string name="mode_key">組合鍵功能</string>
    <string name="delete_mode_key">刪除組合鍵</string>
    <string name="add">新增</string>
    <string name="device_category">設備分類</string>
    <string name="connect_device">連接設備</string>
    <string name="sensor">感測器</string>
    <string name="appliance">家用電器</string>
    <string name="ac">冷氣</string>
    <string name="fan">風扇</string>
    <string name="fan_level">風扇強度</string>
    <string name="fan_switch">風扇開關</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="to_add">去加入</string>
    <string name="fan_spin">風扇旋轉</string>
    <string name="weather_source">天氣資訊來源:中央氣象局</string>
    <string name="go_add_family">前往加入家庭</string>
    <string name="load_chatroom">點擊載入</string>
    <string name="addDevice">尚未添加設備</string>

    <!--Invalid Error Text-->
    <string name="invalid_email">不是合法的信箱名稱</string>
    <string name="invalid_username">不是合法的使用者名稱</string>
    <string name="invalid_password">密碼需大於5</string>
    <string name="invalid_match">密碼不相符</string>
    <string name="test">測試文字</string>
    <string name="update_time">更新時間</string>
    <string name="rain_probability">降雨機率</string>
    <string name="weather">天氣狀況</string>
    <string name="nullValue">null</string>


</resources>