<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_content_square"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_device_name"
        style="@style/TextInputEditText_style"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_device_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="ssid"
            android:hint="@string/hint_device_name"
            android:inputType="text"
            android:nextFocusForward="@id/et_ssid"
            android:selectAllOnFocus="true"
            android:textColor="@color/black" />


    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok"
            style="@style/MaterialButton_square_Style"
            android:layout_width="@dimen/btn_small"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:clickable="true"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/MaterialButton_square_Style"
            android:layout_width="@dimen/btn_small"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />
    </LinearLayout>

</LinearLayout>