<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_fullscreen"
    app:layout_anchorGravity="bottom"
    tools:context=".view.account.LoginFragment">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        style="@style/ReturnButton_Style"
        android:layout_width="@dimen/back_icon_size"
        android:layout_height="@dimen/back_icon_size"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toTopOf="@+id/content_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/content_space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:background="@drawable/content_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/fragment_account_login"
        android:textAppearance="@style/text_login_title"
        app:layout_constraintBottom_toTopOf="@+id/til_email"
        app:layout_constraintEnd_toEndOf="@+id/content_space"
        app:layout_constraintStart_toStartOf="@+id/content_space"
        app:layout_constraintTop_toTopOf="@+id/content_space"
        tools:ignore="TextContrastCheck" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/TextInputEditText_style"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        app:layout_constraintBottom_toBottomOf="@+id/til_password"
        app:layout_constraintEnd_toEndOf="@+id/content_space"
        app:layout_constraintStart_toStartOf="@+id/content_space"
        app:layout_constraintTop_toBottomOf="@+id/text_login">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="@color/black" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/TextInputEditText_style"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        app:layout_constraintBottom_toTopOf="@+id/btn_send"
        app:layout_constraintEnd_toEndOf="@+id/content_space"
        app:layout_constraintStart_toStartOf="@+id/content_space"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:nextFocusForward="@id/btn_send"
            android:selectAllOnFocus="true"
            android:textColor="@color/black" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        style="@style/MaterialButton_square_Style"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="150dp"
        android:clickable="true"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/content_space"
        app:layout_constraintEnd_toEndOf="@+id/content_space"
        app:layout_constraintStart_toStartOf="@+id/content_space"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login_box"
        android:text="@string/label_signUp"
        android:textAppearance="@style/TextButton_style"
        app:layout_constraintBottom_toBottomOf="@+id/content_space"
        app:layout_constraintEnd_toEndOf="@+id/content_space"
        app:layout_constraintStart_toEndOf="@+id/text_forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/btn_send" />

    <TextView
        android:id="@+id/text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login_box"
        android:text="@string/fragment_account_forgot"
        android:textAppearance="@style/TextButton_style"
        app:layout_constraintBottom_toBottomOf="@+id/content_space"
        app:layout_constraintEnd_toStartOf="@+id/text_signup"
        app:layout_constraintStart_toStartOf="@+id/content_space"
        app:layout_constraintTop_toBottomOf="@+id/btn_send" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/content_space"
        app:layout_constraintEnd_toEndOf="@+id/content_space"
        app:layout_constraintStart_toStartOf="@+id/content_space"
        app:layout_constraintTop_toTopOf="@+id/content_space"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading.json"
        app:lottie_loop="true"
        app:lottie_speed="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
