<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mode.ModeSetNamingFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_margin="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="111dp"
        android:textSize="20sp"
        app:cardBackgroundColor="@color/color_faf0dd"
        app:cardCornerRadius="10dp"
        app:cardElevation="0px"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_mode_key_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="32dp"
                android:text="@string/mode_key_setting"
                android:textAppearance="@style/text_login_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_mode_key_name"
                style="@style/TextInputEditText_style"
                android:layout_width="@dimen/input_width"
                android:layout_height="@dimen/input_height"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="username"
                    android:hint="@string/hint_mode_key_name"
                    android:nextFocusForward="@id/tie_password"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_mode_key_complete"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/color_14b2d4"
                android:text="@string/complete"
                android:textColor="@color/color_faf0dd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>